add arena border